# http2-server-perf-tests

./: .gitignore  LICENSE  README.md
apache_tomcat/: README.md
golang/: README.md  http2-server.go
java/netty-http2-test/: README.md  pom.xml
java/netty-http2-test/src/main/java/com/example/netty/http2/: Http2ClientResponseHandler.java  Http2Server.java  Http2ServerResponseHandler.java  Http2SettingsHandler.java  Http2Util.java
java/tomcat/: README.md  pom.xml
java/tomcat/src/main/java/info/mgsolutions/tomcat/: AsyncPlainTextServlet.java  Main.java  PlainTextServlet.java  TomcatEmbedded.java
java/tomcat/src/main/java/info/mgsolutions/tomcat/onenio/: Http11OneNioProtocol.java  OneNioChannel.java  OneNioEndpoint.java
java/tomcat/src/main/java/info/mgsolutions/tomcat/uring/jni/: Native.java  NativeRunner.java
java/tomcat/src/main/java/info/mgsolutions/tomcat/uring/nio/: IoUringDatagramChannel.java  IoUringPipe.java  IoUringSelectionKey.java  IoUringSelector.java  IoUringSelectorProvider.java  IoUringServerSocketChannel.java  IoUringSinkChannel.java  IoUringSocketChannel.java  IoUringSourceChannel.java
java/tomcat/src/main/java/info/mgsolutions/tomcat/uring/nio2/: IoUringAsynchronousChannelGroup.java  IoUringAsynchronousChannelProvider.java  (+2 more)
java/tomcat/src/main/native-package/src/: tomcat_embedded.h  tomcat_io_uring.c  tomcat_io_uring.h
java/tomcat/src/main/resources/: logging.properties
netcore/: Program.cs  README.md  generate-cert.sh  netcore-http2.csproj
nodejs/: README.md  http2-server.js
rust/: Cargo.toml  README.md
rust/src/: main.rs
